; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/iwn/extr_if_iwn.c_iwn_mem_read.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/iwn/extr_if_iwn.c_iwn_mem_read.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iwn_softc = type { i32 }

@IWN_MEM_RADDR = common dso_local global i32 0, align 4
@IWN_MEM_RDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.iwn_softc*, i32)* @iwn_mem_read to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iwn_mem_read(%struct.iwn_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.iwn_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.iwn_softc* %0, %struct.iwn_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.iwn_softc*, %struct.iwn_softc** %3, align 8
  %6 = load i32, i32* @IWN_MEM_RADDR, align 4
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @IWN_WRITE(%struct.iwn_softc* %5, i32 %6, i32 %7)
  %9 = load %struct.iwn_softc*, %struct.iwn_softc** %3, align 8
  %10 = call i32 @IWN_BARRIER_READ_WRITE(%struct.iwn_softc* %9)
  %11 = load %struct.iwn_softc*, %struct.iwn_softc** %3, align 8
  %12 = load i32, i32* @IWN_MEM_RDATA, align 4
  %13 = call i32 @IWN_READ(%struct.iwn_softc* %11, i32 %12)
  ret i32 %13
}

declare dso_local i32 @IWN_WRITE(%struct.iwn_softc*, i32, i32) #1

declare dso_local i32 @IWN_BARRIER_READ_WRITE(%struct.iwn_softc*) #1

declare dso_local i32 @IWN_READ(%struct.iwn_softc*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
